--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
+        android:background="@color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
@@ -19,7 +20,7 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/white"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
             android:fitsSystemWindows="true"
@@ -32,9 +33,9 @@
             <ImageView
                 android:id="@+id/expandedImage"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="270dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/family_mod"
+                android:src="@drawable/wave_image"
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true"
 
@@ -75,13 +76,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:layout_marginTop="9dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="45dp"
                     app:cardElevation="2dp"
                     app:cardMaxElevation="12dp"
                     app:cardPreventCornerOverlap="true"
                     app:cardUseCompatPadding="true"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="33dp">
 
@@ -101,18 +102,19 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnDefaultActivity"
-                    android:layout_width="match_parent"
-                    android:layout_height="204dp"
+                    android:layout_width="184dp"
+                    android:layout_height="172dp"
                     android:onClick="scanDocument"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="8dp"
-                    app:cardElevation="6dp"
+                    app:cardElevation="2dp"
                     app:cardMaxElevation="10dp"
                     app:cardPreventCornerOverlap="true"
                     app:cardUseCompatPadding="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cvTitle"
-                    tools:ignore="OnClick"
-                    tools:layout_editor_absoluteX="0dp">
+                    tools:ignore="OnClick">
 
                     <ImageView
                         android:id="@+id/img"
@@ -138,21 +140,22 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnFillForm"
-                    android:layout_width="match_parent"
-                    android:layout_height="204dp"
+                    android:layout_width="184dp"
+                    android:layout_height="172dp"
                     android:onClick="scanDocument"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="8dp"
-                    app:cardElevation="6dp"
+                    app:cardElevation="2dp"
                     app:cardMaxElevation="10dp"
                     app:cardPreventCornerOverlap="true"
                     app:cardUseCompatPadding="true"
                     app:layout_anchor="@+id/nestedScrollView"
                     app:layout_anchorGravity="center"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnDefaultActivity"
-                    app:layout_constraintVertical_bias="0.0"
-                    tools:layout_editor_absoluteX="0dp">
+                    app:layout_constraintVertical_bias="0.0">
 
                     <ImageView
                         android:id="@+id/imgNote"
